✨ Add redis
