# internal/delivery/http/handler/user.go
@@ -2,19 +2,19 @@ package handler
 
 import (
 	"github.com/8thgencore/passfort/internal/domain"
-	"github.com/8thgencore/passfort/internal/usecase"
+	"github.com/8thgencore/passfort/internal/service"
 	"github.com/gin-gonic/gin"
 )
 
 // UserHandler represents the HTTP handler for user-related requests
 type UserHandler struct {
-	uc usecase.UserService
+	us service.UserService
 }
 
 // NewUserHandler creates a new UserHandler instance
-func NewUserHandler(svc usecase.UserService) *UserHandler {
+func NewUserHandler(us service.UserService) *UserHandler {
 	return &UserHandler{
-		svc,
+		us,
 	}
 }
 
@@ -40,7 +40,7 @@ type registerRequest struct {
 //	@Failure		409				{object}	errorResponse	"Data conflict error"
 //	@Failure		500				{object}	errorResponse	"Internal server error"
 //	@Router			/users [post]
-func (h *UserHandler) Register(ctx *gin.Context) {
+func (uh *UserHandler) Register(ctx *gin.Context) {
 	var req registerRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		validationError(ctx, err)
@@ -53,7 +53,7 @@ func (h *UserHandler) Register(ctx *gin.Context) {
 		Password: req.Password,
 	}
 
-	_, err := h.uc.Register(ctx, &user)
+	_, err := uh.us.Register(ctx, &user)
 	if err != nil {
 		handleError(ctx, err)
 		return
@@ -62,4 +62,182 @@ func (h *UserHandler) Register(ctx *gin.Context) {
 	resp := newUserResponse(&user)
 
 	handleSuccess(ctx, resp)
+}
+
+// listUsersRequest represents the request body for listing users
+type listUsersRequest struct {
+	Skip  uint64 `form:"skip" binding:"required,min=0" example:"0"`
+	Limit uint64 `form:"limit" binding:"required,min=5" example:"5"`
+}
+
+// ListUsers godoc
+//
+//	@Summary		List users
+//	@Description	List users with pagination
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			skip	query		uint64			true	"Skip"
+//	@Param			limit	query		uint64			true	"Limit"
+//	@Success		200		{object}	meta			"Users displayed"
+//	@Failure		400		{object}	errorResponse	"Validation error"
+//	@Failure		500		{object}	errorResponse	"Internal server error"
+//	@Router			/users [get]
+//	@Security		BearerAuth
+func (uh *UserHandler) ListUsers(ctx *gin.Context) {
+	var req listUsersRequest
+	var usersList []userResponse
+
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		validationError(ctx, err)
+		return
+	}
+
+	users, err := uh.us.ListUsers(ctx, req.Skip, req.Limit)
+	if err != nil {
+		handleError(ctx, err)
+		return
+	}
+
+	for _, user := range users {
+		usersList = append(usersList, newUserResponse(&user))
+	}
+
+	total := uint64(len(usersList))
+	meta := newMeta(total, req.Limit, req.Skip)
+	rsp := toMap(meta, usersList, "users")
+
+	handleSuccess(ctx, rsp)
+}
+
+// getUserRequest represents the request body for getting a user
+type getUserRequest struct {
+	ID uint64 `uri:"id" binding:"required,min=1" example:"1"`
+}
+
+// GetUser godoc
+//
+//	@Summary		Get a user
+//	@Description	Get a user by id
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		uint64			true	"User ID"
+//	@Success		200	{object}	userResponse	"User displayed"
+//	@Failure		400	{object}	errorResponse	"Validation error"
+//	@Failure		404	{object}	errorResponse	"Data not found error"
+//	@Failure		500	{object}	errorResponse	"Internal server error"
+//	@Router			/users/{id} [get]
+//	@Security		BearerAuth
+func (uh *UserHandler) GetUser(ctx *gin.Context) {
+	var req getUserRequest
+	if err := ctx.ShouldBindUri(&req); err != nil {
+		validationError(ctx, err)
+		return
+	}
+
+	user, err := uh.us.GetUser(ctx, req.ID)
+	if err != nil {
+		handleError(ctx, err)
+		return
+	}
+
+	rsp := newUserResponse(user)
+
+	handleSuccess(ctx, rsp)
+}
+
+// updateUserRequest represents the request body for updating a user
+type updateUserRequest struct {
+	Name     string              `json:"name" binding:"omitempty,required" example:"John Doe"`
+	Email    string              `json:"email" binding:"omitempty,required,email" example:"test@example.com"`
+	Password string              `json:"password" binding:"omitempty,required,min=8" example:"12345678"`
+	Role     domain.UserRoleEnum `json:"role" binding:"omitempty,required,user_role" example:"admin"`
+}
+
+// UpdateUser godoc
+//
+//	@Summary		Update a user
+//	@Description	Update a user's name, email, password, or role by id
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id					path		uint64				true	"User ID"
+//	@Param			updateUserRequest	body		updateUserRequest	true	"Update user request"
+//	@Success		200					{object}	userResponse		"User updated"
+//	@Failure		400					{object}	errorResponse		"Validation error"
+//	@Failure		401					{object}	errorResponse		"Unauthorized error"
+//	@Failure		403					{object}	errorResponse		"Forbidden error"
+//	@Failure		404					{object}	errorResponse		"Data not found error"
+//	@Failure		500					{object}	errorResponse		"Internal server error"
+//	@Router			/users/{id} [put]
+//	@Security		BearerAuth
+func (uh *UserHandler) UpdateUser(ctx *gin.Context) {
+	var req updateUserRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		validationError(ctx, err)
+		return
+	}
+
+	idStr := ctx.Param("id")
+	id, err := stringToUint64(idStr)
+	if err != nil {
+		validationError(ctx, err)
+		return
+	}
+
+	user := domain.User{
+		ID:       id,
+		Name:     req.Name,
+		Email:    req.Email,
+		Password: req.Password,
+		Role:     req.Role,
+	}
+
+	_, err = uh.us.UpdateUser(ctx, &user)
+	if err != nil {
+		handleError(ctx, err)
+		return
+	}
+
+	rsp := newUserResponse(&user)
+
+	handleSuccess(ctx, rsp)
+}
+
+// deleteUserRequest represents the request body for deleting a user
+type deleteUserRequest struct {
+	ID uint64 `uri:"id" binding:"required,min=1" example:"1"`
+}
+
+// DeleteUser godoc
+//
+//	@Summary		Delete a user
+//	@Description	Delete a user by id
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		uint64			true	"User ID"
+//	@Success		200	{object}	response		"User deleted"
+//	@Failure		400	{object}	errorResponse	"Validation error"
+//	@Failure		401	{object}	errorResponse	"Unauthorized error"
+//	@Failure		403	{object}	errorResponse	"Forbidden error"
+//	@Failure		404	{object}	errorResponse	"Data not found error"
+//	@Failure		500	{object}	errorResponse	"Internal server error"
+//	@Router			/users/{id} [delete]
+//	@Security		BearerAuth
+func (uh *UserHandler) DeleteUser(ctx *gin.Context) {
+	var req deleteUserRequest
+	if err := ctx.ShouldBindUri(&req); err != nil {
+		validationError(ctx, err)
+		return
+	}
+
+	err := uh.us.DeleteUser(ctx, req.ID)
+	if err != nil {
+		handleError(ctx, err)
+		return
+	}
+
+	handleSuccess(ctx, nil)
 }
